# scribu

./: .eslintrc.js  .eslintrc.json  .gitignore  .prettierrc.js  README.md  app.example.com+3-key.pem  app.example.com+3.pem  database.sqlite  electron-builder.config.js  example.com+5-key.pem  example.com+5.pem  long-text.ts  ormconfig.json  package-lock.json  package.json  short-text.ts  tsconfig.json  vite.config.ts  webpack.main.config.js  webpack.renderer.config.js
.cert/: cert.pem  key.pem
.erb/configs/: webpack.config.base.js  webpack.config.main.prod.babel.js  webpack.config.renderer.dev.babel.js  webpack.config.renderer.prod.babel.js
.webpack/renderer/: main_window.05966a6d2e2b831a8680.hot-update.js  main_window.233c7d115c85d6dc6e8b.hot-update.js  main_window.3ad661bbe936cce73110.hot-update.js  main_window.44b954bf4573b74184df.hot-update.js  main_window.71bcdff2b197cdf65054.hot-update.js  main_window.8385fe837311dac2cb67.hot-update.js  main_window.b2ebfcf94c5e869315a5.hot-update.js  main_window.c98057ef5995bc332d00.hot-update.js  main_window.ca9b61f1fbe793c63a34.hot-update.js  main_window.cd5bc9ec2056d5f2ceaf.hot-update.js  main_window.d8a60fb99398d490cd02.hot-update.js  main_window.d9bf5f76ce0d3a6f592e.hot-update.js
docs/: about-what.md  refactoring for workspaces.md
prisma/: dev.db  dev.db-journal  schema.prisma
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  menu.rs  workspace.rs
src-tauri/src/commands/: workspace.rs
types/: workspace-api.d.ts
(+76 files in other folders)
